[gd_scene load_steps=28 format=2]

[ext_resource path="res://Memory4.gd" type="Script" id=1]
[ext_resource path="res://Assets/slkscr.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://MemoryMap4.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Cartoon Loud Voice Wah Hoo 01.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 236, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 87.5, 40.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16.5, 17.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 30.5, 208.25 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 45.25, 21.25 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 18.5, 38.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 41.25, 19 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 43.5, 16.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 23, 83.625 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 41, 41.125 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 47.5, 14.75 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 41.75, 202 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 42.5, 17.5 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 18.5, 14.25 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 21.25, 15.75 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 43.75, 15.5 )

[sub_resource type="DynamicFont" id=17]
size = 100
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=18]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=19]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 239, 47.5 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 64.375, 21.5 )

[node name="Memory4" type="Node2D"]
script = ExtResource( 1 )

[node name="MemoryMap4" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="StartPlane" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartPlane"]
position = Vector2( 528, 105 )
shape = SubResource( 1 )

[node name="KillPlane1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillPlane1"]
position = Vector2( 526.5, 141.5 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="KillPlane1"]
position = Vector2( 697, 262.5 )
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="KillPlane1"]
position = Vector2( 308.5, 314.25 )
shape = SubResource( 4 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="KillPlane1"]
position = Vector2( 379, 503 )
shape = SubResource( 5 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="KillPlane1"]
position = Vector2( 503, 381.5 )
shape = SubResource( 6 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="KillPlane1"]
position = Vector2( 436.25, 359 )
shape = SubResource( 7 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="KillPlane1"]
position = Vector2( 428.5, 264.5 )
shape = SubResource( 8 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="KillPlane1"]
position = Vector2( 357, 199 )
shape = SubResource( 9 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="KillPlane1"]
position = Vector2( 627, 480.125 )
shape = SubResource( 10 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="KillPlane1"]
position = Vector2( 568.5, 360.25 )
shape = SubResource( 11 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="KillPlane1"]
position = Vector2( 720.75, 320 )
shape = SubResource( 12 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="KillPlane1"]
position = Vector2( 529, 504 )
shape = SubResource( 13 )

[node name="CollisionShape2D13" type="CollisionShape2D" parent="KillPlane1"]
position = Vector2( 457, 411 )
shape = SubResource( 14 )

[node name="CollisionShape2D14" type="CollisionShape2D" parent="KillPlane1"]
position = Vector2( 356, 456 )
shape = SubResource( 15 )

[node name="CollisionShape2D15" type="CollisionShape2D" parent="KillPlane1"]
position = Vector2( 632.25, 263.5 )
shape = SubResource( 16 )

[node name="Label" type="Label" parent="."]
light_mask = 0
margin_left = 315.0
margin_top = 85.0
margin_right = 757.0
margin_bottom = 186.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 17 )
text = "Level 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 292.0
margin_top = 188.0
margin_right = 780.0
margin_bottom = 341.0
custom_fonts/font = SubResource( 18 )
text = "Path is shown for ten seconds"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 412.0
margin_top = 309.0
margin_right = 665.0
margin_bottom = 408.0
custom_fonts/font = SubResource( 19 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="WinPlane" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WinPlane"]
position = Vector2( 528, 576.5 )
shape = SubResource( 20 )

[node name="SwitchTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="ScoreBlock" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreBlock"]
position = Vector2( 609, 509 )
shape = SubResource( 21 )

[node name="VictorySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="body_entered" from="StartPlane" to="." method="_on_StartPlane_body_entered"]
[connection signal="body_entered" from="KillPlane1" to="." method="_on_KillPlane1_body_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="body_entered" from="WinPlane" to="." method="_on_WinPlane_body_entered"]
[connection signal="timeout" from="SwitchTimer" to="." method="_on_SwitchTimer_timeout"]
